edpdgen_lib/src/snapshots/edpdgen_lib__tests__word_data_tests___1.snap
---
source: edpdgen_lib/src/lib.rs
expression: toc_summary

---

  <hr />
  <div>
    <h4 id="ābādhato_dpd">ābādhato</h4>
    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>ābādhato</span></td></tr><tr><td>Grammar</td><td><span>ind, adv, abl sg of ābādha</span></td></tr><tr><td>English</td><td><span><strong>as disease, as sickness, as illness, as affliction</strong></span></td></tr><tr><td>Family</td><td><span>ā √bādh</span></td></tr><tr><td>Root</td><td><span>√bādh<sup>･</sup>1.1 a (to press, oppress)</span></td></tr><tr><td>Construction</td><td><span>ā + √bādh + a + to<br/>ābādha + to</span></td></tr><tr><td>Derivative</td><td><span>taddhita (to)</span></td></tr><tr><td>Sanskrit</td><td><span>ābādhāt</span></td></tr><tr><td>Sanskrit Root</td><td><span>√bādh</span></td></tr><tr><td>Commentary</td><td><span>(MNa) rog'aṭṭhena <b>ābādhato</b></span></td></tr></tbody>
    </table>
    <br /><span>so yad'eva tattha hoti rūpagataṃ vedanāgataṃ saññāgataṃ saṅkhāragataṃ viññāṇagataṃ, te dhamme aniccato dukkhato rogato gaṇḍato sallato aghato <b>ābādhato</b> parato palokato suññato anattato samanupassati.</span><br /><span class="sutta-source-dpd"><i>AN 9.36 jhānasuttaṃ</i></span><br /><br /></div>