edpdgen_lib/src/snapshots/edpdgen_lib__tests__word_data_tests___3.snap
---
source: edpdgen_lib/src/lib.rs
expression: toc_summary

---

  <hr />
  <div>
    <h4 id="ābādhikinī_dpd">ābādhikinī</h4>
    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>ābādhikinī</span></td></tr><tr><td>Grammar</td><td><span>f, from ābādhika</span></td></tr><tr><td>English</td><td><span><strong>sick woman, ill woman</strong></span></td></tr><tr><td>Family</td><td><span>ā √bādh</span></td></tr><tr><td>Root</td><td><span>√bādh<sup>･</sup>1.1 a (to press, oppress)</span></td></tr><tr><td>Construction</td><td><span>ā + √bādh + a + ika + inī<br/>ābādhika + inī</span></td></tr><tr><td>Derivative</td><td><span>taddhita (inī)</span></td></tr><tr><td>Sanskrit</td><td><span>ābādha + ika</span></td></tr><tr><td>Sanskrit Root</td><td><span>√bādh</span></td></tr></tbody>
    </table>
    <br /><span>ehi tvaṃ, ambho purisa, yen'ayyo ānando ten'upasaṅkama, upasaṅkamitvā mama vacanena ayyassa ānandassa pāde sirasā vanda, itthannāmā, bhante, bhikkhunī <b>ābādhikinī</b> dukkhitā bāḷhagilānā.</span><br /><span class="sutta-source-dpd"><i>AN 4.159 bhikkhunīsuttaṃ</i></span><br /><br /></div>